--- a/general/Hampo/app/src/main/res/layout/activity_login.xml
+++ b/general/Hampo/app/src/main/res/layout/activity_login.xml
@@ -32,6 +32,7 @@
                 android:id="@+id/correo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="#00000000"
                 android:hint="Correo electrónico"
                 android:imeOptions="actionNext"
                 android:inputType="textEmailAddress"
@@ -55,6 +56,7 @@
                 android:id="@+id/contraseña"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="#00000000"
                 android:hint="Contraseña"
                 android:imeOptions="actionDone"
                 android:inputType="textPassword"
@@ -73,6 +75,8 @@
             android:text="Iniciar Sesión"
             android:textColor="@color/colorPrimary"
             android:textSize="14sp"
+            app:backgroundTint="#00000000"
+            app:backgroundTintMode="screen"
             app:layout_constraintEnd_toStartOf="@+id/registro"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -114,6 +118,8 @@
             android:text="Registro"
             android:textColor="@color/colorPrimary"
             android:textSize="14sp"
+            app:backgroundTint="#00000000"
+            app:backgroundTintMode="screen"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/inicio_sesión"
@@ -130,7 +136,10 @@
             android:background="@drawable/fondo_boton_login_google"
             android:drawableLeft="@drawable/logo_google"
             android:text="Iniciar con Google"
+            android:textColor="@color/colorAccent2"
             android:textSize="14sp"
+            app:backgroundTint="#00000000"
+            app:backgroundTintMode="screen"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
