Hola buenas, Login ✔

--- a/general/Hampo/app/src/main/res/layout/activity_login.xml
+++ b/general/Hampo/app/src/main/res/layout/activity_login.xml
@@ -70,8 +70,8 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
             android:background="@drawable/fondo_boton_login_correo"
+            android:onClick="iniciarSesion"
             android:text="Iniciar Sesión"
             android:textColor="@color/colorPrimary"
             android:textSize="14sp"
@@ -100,6 +100,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:background="#00FFFFFF"
+            android:onClick="reestablecerContraseña"
             android:text="¿No recuerdas tu contraseña?"
             android:textColor="@color/colorPrimary"
             app:layout_constraintEnd_toEndOf="parent"
@@ -111,10 +112,9 @@
             android:layout_width="0dp"
             android:layout_height="56dp"
             android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
             android:background="@drawable/fondo_boton_login_correo"
+            android:onClick="registrar"
             android:text="Registro"
             android:textColor="@color/colorPrimary"
             android:textSize="14sp"
@@ -135,6 +135,7 @@
             android:layout_marginBottom="24dp"
             android:background="@drawable/fondo_boton_login_google"
             android:drawableLeft="@drawable/logo_google"
+            android:onClick="iniciarConGoogle"
             android:text="Iniciar con Google"
             android:textColor="@color/colorAccent2"
             android:textSize="14sp"
